# sussykiwis

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  run  run.cmd  run.ps1
client/: .env  .env.development  ATTRIBUTIONS.txt  index.html  package-lock.json  package.json  script.js  tsconfig.json
client/public/assets/: amongus.ldtk  game.ldtk  lobby.ldtk
client/public/assets/kiwis/: kiwiGreenobj.mtl  kiwiPurple.mtl
client/src/: logger.ts  main copy.ts  main.ts  state.ts  style.css
client/src/app/: app.ts  appstate.ts  bootstrapRoute.ts  ui.ts
client/src/core/: inputController.ts  movement.ts  selectors.ts  session.ts
client/src/game/: cameraMovement.ts  object.ts  player.ts  playerTag.ts  world.ts
client/src/game/puzzles/: puzzleModal.ts  timerPuzzleScene.ts  wiresPuzzleScene.ts
client/src/game/scenes/: ejectedScene.ts  gameScene.ts  mainMenuScene.ts  queueScene.ts  (+6 more)
client/src/networking/: client.ts  message.ts
client/src/phaser/: lobbyLdtk.ts  roleRevealScene.ts  worldScene.ts
client/tests/app/: bootstrapRoute.test.ts
client/tests/networking/: client.test.ts  routes.test.ts
container/: Dockerfile  docker-compose.yml  nginx.conf
docker/: Docker.md  entrypoint.sh
docs/spec/: 1.amongus_spec.md
docs/todo/: todo.md
server/: .env  .gitignore  Cargo.toml
server/logs/: server.log.2026-04-28
server/src/: lib.rs  lobby.rs  main.rs  model.rs  server.rs
server/src/lobby/: networking.rs  simulation.rs  state.rs
server/src/lobby/networking/: commands.rs  handshake.rs  mod.rs  model.rs  session.rs
server/tests/: tcp_message.rs
(+16 files in other folders)
