[package]
name = "myserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "^0.8.8", features = ["ws"] }
axum-test = "20.0.0"
http = "1.4.0"
reqwest = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "^1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.0", features = ["serde"] }
